<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Eventy</string>

    <string name="empty">No events available</string>
    <string name="title_activity_event_details">Event Details</string>
    <string name="action_settings">Settings</string>
    <string name="title_placeholder">Title</string>
    <string name="place_placeholder">Place</string>
    <string name="guests">Guests</string>
    <string name="button_text_save">Save Event Details</string>
    <string name="delete_event">Delete Event</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="title_activity_maps">Map</string>
    <string name="no_title">(No Title)</string>
    <string name="add_map">Add Map</string>
    <string name="add_guest">Add Guest</string>
    <string name="send_invites">Send Invites</string>
    <string name="email_placeholder">Email</string>
    <string name="password_placeholder">Password</string>
    <string name="confirm_password_placeholder">Repeat Password</string>
    <string name="no_account">No account yet? Create one</string>
    <string name="already_member">Already a member? Login</string>
    <string name="create_account">Create Account</string>
    <string name="thing">New Thing</string>
    <string name="add_thing">Add thing</string>
    <string name="invalid_email_error">enter a valid email</string>
    <string name="empty_password">password cannot be empty</string>
    <string name="password_mismatch_error">passwords must match</string>
    <string name="invalid_password">password must be longer than 5 characters</string>
    <string name="cannot_create_account">Cannot create account now. Try again later.</string>
    <string name="authentication_error">email and password don\'t match our records</string>
    <string name="add_event">Add Event</string>
    <string name="event_time">Time</string>
    <string name="event_date">Date</string>

    <string name="confirmed_guests_count_description">
        <xliff:g id="confirmed">%1$s</xliff:g> guests have confirmed
    </string>
    <string name="guests_divider">out of</string>
    <string name="total_guests_count_description">
        <xliff:g id="confirmed">%1$s</xliff:g> guests invited
    </string>
    <string name="counter_divider">/</string>

    <string name="login_error">There was an error in the login process.</string>
    <string name="event_saved">Event saved</string>
    <string name="event_saved_error">Event could not be saved at this moment</string>
</resources>
