<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/textlayout_margins"
            android:layout_marginBottom="@dimen/textlayout_margins">
            <EditText
                android:id="@+id/event_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="start"
                android:textAlignment="gravity"
                android:hint="@string/title_placeholder"/>
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/textlayout_margins"
                android:layout_marginBottom="@dimen/textlayout_margins">
            <EditText
                android:id="@+id/event_date"
                android:inputType="date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_date"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/textlayout_margins"
                android:layout_marginBottom="@dimen/textlayout_margins">
            <EditText
                android:id="@+id/event_time"
                android:inputType="time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_time"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/textlayout_margins"
                android:layout_marginBottom="@dimen/textlayout_margins">
                <EditText
                    android:id="@+id/event_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/place_placeholder" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/divider">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:layout_gravity="start"
                android:text="@string/guests"/>
            <Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />
            <ImageButton
                android:id="@+id/add_guests_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_group_add_black_24dp"
                android:background="@color/transparent"
                android:layout_gravity="center"
                android:padding="@dimen/btn_padding"
                android:contentDescription="@string/add_guest"/>
            <ImageButton
                android:id="@+id/send_invites_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_send_black_24dp"
                android:background="@color/transparent"
                android:layout_gravity="center"
                android:padding="@dimen/btn_padding"
                android:contentDescription="@string/send_invites"/>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/guest_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="@dimen/details_list_minheight"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/textlayout_margins"
                android:layout_marginBottom="@dimen/textlayout_margins">
                <EditText
                    android:id="@+id/new_thing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/thing"/>
            </android.support.design.widget.TextInputLayout>
            <ImageButton
                android:id="@+id/add_things_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_add_circle_black_24dp"
                android:background="@color/transparent"
                android:contentDescription="@string/add_thing"/>
        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/things_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="@dimen/details_list_minheight"/>
    </LinearLayout>
</ScrollView>